dissapearing js text caused by empty href link on CV link - link now added as #top as # home section missies out the top section of the homepage causing layout issues

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -52,7 +52,7 @@ html {
 // sections of the homepage
 
 .section {
-    height: 95vh;
+    height: 100vh;
 }
 
 // ----------------------------------------  About Section ----------------------------------------   //
